Closes #15.  Closes #3.  Closes #16.  Closes #14.  Set up starting point for our application.

--- a/SearchTiles/Views/ReactApplication.cshtml
+++ b/SearchTiles/Views/ReactApplication.cshtml
@@ -11,7 +11,10 @@
     <title>ReactApplication</title>
 </head>
 <body>
-    <div> 
-    </div>
+    <div id="application"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script src="~/content/javascript/compiledtypescript.js"></script>
 </body>
 </html>
