Closes #9. (for now).  Threw in some super basic CSS.

--- a/SearchTiles/Views/ReactApplication.cshtml
+++ b/SearchTiles/Views/ReactApplication.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ReactApplication</title>
+    <link rel="stylesheet" href="~/content/stylesheets/main.css" />
 </head>
 <body>
     <div id="application"></div>
