--- a/SearchTiles/content/stylesheets/main.css
+++ b/SearchTiles/content/stylesheets/main.css
@@ -35,3 +35,26 @@
     font-size: 1.0em;
     text-overflow: ellipsis;
 }
+
+.filterHolder {
+    padding: 1em;
+    text-align: center;
+}
+
+.filterInput {
+    padding: 0.5em;
+    font-size: 3em;
+    border-color: lightgray;
+    border-width: 0.25em;
+    border-style: solid;
+    width: 80%;
+}
+
+.filterClear {
+    position: relative;
+    left: -3em;
+    top: -0.4em;
+    border-radius: 50%;
+    border-style: solid;
+    font-size: 1.5em;
+}
