Closes #17.  Closes #19.  Implemented animations as filters get apply.

--- a/SearchTiles/Views/ReactApplication.cshtml
+++ b/SearchTiles/Views/ReactApplication.cshtml
@@ -10,10 +10,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>ReactApplication</title>
     <link rel="stylesheet" href="~/content/stylesheets/main.css" />
+    <link rel="stylesheet" href="~/content/stylesheets/animation.css" />
 </head>
 <body>
     <div id="application"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-with-addons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
     <script src="~/content/javascript/compiledtypescript.js"></script>
 </body>
