--- a/SearchTiles/content/stylesheets/main.css
+++ b/SearchTiles/content/stylesheets/main.css
@@ -43,9 +43,10 @@
 
 .filterClear {
     position: absolute;
-    right: 5.5em;
+    right: 11%;
     top: 2.5em;
     border-radius: 50%;
     border-style: solid;
     font-size: 1.5em;
+    background-color: lightgray;
 }
