--- a/SearchTiles/Views/ReactApplication.cshtml
+++ b/SearchTiles/Views/ReactApplication.cshtml
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div id="application"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-with-addons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
+    <script src="~/content/javascript/libraries/react-15-4-2-with-addons.min.js"></script>
+    <script src="~/content/javascript/libraries/react-dom-15-4-2.min.js"></script>
     <script src="~/content/javascript/compiledtypescript.js"></script>
 </body>
 </html>
